# process-monitor

./: .gitignore  CMakeLists.txt  PLAN.md  TODO.md  resources.qrc
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Process.cpp  Process.h  ProcessMonitor.cpp  ProcessMonitor.h  ResourceInfo.cpp  ResourceInfo.h  SystemInfo.cpp  SystemInfo.h  utils.cpp  utils.h
src/ui/: CMakeLists.txt  ForgotPasswordDialog.ui  Forgotpassworddialog.cpp  Forgotpassworddialog.h  Forgotpassworddialog.ui  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  welcomepagedialog.cpp  welcomepagedialog.h  welcomepagedialog.ui
